upragde react-scripts and depens

--- a/package.json
+++ b/package.json
@@ -5,29 +5,29 @@
   "dependencies": {
     "cuid": "^2.1.6",
     "date-fns": "^2.0.0-alpha.27",
-    "firebase": "^6.0.2",
+    "firebase": "^7.8.1",
     "google-map-react": "^1.1.4",
     "moment": "^2.22.0",
-    "react": "^16.8.6",
+    "react": "16.12.0",
     "react-cropper": "^1.2.0",
-    "react-datepicker": "2.5.0",
-    "react-dom": "^16.8.6",
+    "react-datepicker": "2.12.0",
+    "react-dom": "16.12.0",
     "react-dropzone": "^10.1.5",
     "react-infinite-scroller": "^1.2.4",
     "react-lazyload": "^2.5.0",
     "react-places-autocomplete": "^7.2.1",
-    "react-redux": "^5.1.1",
-    "react-redux-firebase": "^2.2.6",
+    "react-redux": "^7.1.3",
+    "react-redux-firebase": "^3.1.1",
     "react-redux-toastr": "^7.5.1",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.0",
-    "redux": "^4.0.1",
-    "redux-auth-wrapper": "^2.1.0",
-    "redux-firestore": "^0.3.2",
-    "redux-form": "^7.4.2",
+    "react-router-dom": "5.1.2",
+    "react-scripts": "3.3.1",
+    "redux": "4.0.5",
+    "redux-auth-wrapper": "^3.0.0",
+    "redux-firestore": "^0.12.0",
+    "redux-form": "^8.3.0",
     "redux-thunk": "^2.3.0",
     "revalidate": "^1.2.0",
-    "semantic-ui-react": "^0.87.1"
+    "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
@@ -54,9 +54,9 @@
   },
   "devDependencies": {
     "@types/react-redux-toastr": "^7.4.1",
-    "@types/react-router-dom": "^4.3.3",
+    "@types/react-router-dom": "^5.1.3",
     "redux-devtools-extension": "^2.13.8",
-    "source-map-explorer": "^1.5.0",
+    "source-map-explorer": "^2.2.2",
     "typescript": "^3.3"
   }
 }
