--- a/package.json
+++ b/package.json
@@ -1,62 +1,65 @@
 {
-  "name": "eventus",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "cuid": "^2.1.6",
-    "date-fns": "^2.0.0-alpha.27",
-    "firebase": "^7.8.1",
-    "google-map-react": "^1.1.4",
-    "moment": "^2.22.0",
-    "react": "16.12.0",
-    "react-cropper": "^1.2.0",
-    "react-datepicker": "2.12.0",
-    "react-dom": "16.12.0",
-    "react-dropzone": "^10.1.5",
-    "react-infinite-scroller": "^1.2.4",
-    "react-lazyload": "^2.5.0",
-    "react-places-autocomplete": "^7.2.1",
-    "react-redux": "^7.1.3",
-    "react-redux-firebase": "^3.1.1",
-    "react-redux-toastr": "^7.5.1",
-    "react-router-dom": "5.1.2",
-    "react-scripts": "3.3.1",
-    "redux": "4.0.5",
-    "redux-auth-wrapper": "^3.0.0",
-    "redux-firestore": "^0.12.0",
-    "redux-form": "^8.3.0",
-    "redux-thunk": "^2.3.0",
-    "revalidate": "^1.2.0",
-    "semantic-ui-react": "^0.88.2"
-  },
-  "scripts": {
-    "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "deploy": "npm run build && firebase deploy"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/react-redux-toastr": "^7.4.1",
-    "@types/react-router-dom": "^5.1.3",
-    "redux-devtools-extension": "^2.13.8",
-    "source-map-explorer": "^2.2.2",
-    "typescript": "^3.3"
-  }
+	"name": "eventus",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"cuid": "^2.1.6",
+		"date-fns": "^2.0.0-alpha.27",
+		"firebase": "^7.8.1",
+		"google-map-react": "^1.1.4",
+		"moment": "^2.22.0",
+		"react": "16.12.0",
+		"react-cropper": "^1.2.0",
+		"react-datepicker": "2.12.0",
+		"react-dom": "16.12.0",
+		"react-dropzone": "^10.1.5",
+		"react-infinite-scroller": "^1.2.4",
+		"react-lazyload": "^2.5.0",
+		"react-places-autocomplete": "^7.2.1",
+		"react-redux": "^7.1.3",
+		"react-redux-firebase": "^3.1.1",
+		"react-redux-toastr": "^7.5.1",
+		"react-router-dom": "5.1.2",
+		"react-scripts": "3.3.1",
+		"redux": "4.0.5",
+		"redux-auth-wrapper": "^3.0.0",
+		"redux-firestore": "^0.12.0",
+		"redux-form": "^8.3.0",
+		"redux-thunk": "^2.3.0",
+		"revalidate": "^1.2.0",
+		"semantic-ui-react": "^0.88.2"
+	},
+	"scripts": {
+		"analyze": "source-map-explorer 'build/static/js/*.js'",
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test --env=jsdom",
+		"eject": "react-scripts eject",
+		"prettier-check": "prettier --check src/**/*.js",
+		"format": "prettier --write src/**/*.js",
+		"deploy": "npm run build && firebase deploy"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@types/react-redux-toastr": "^7.4.1",
+		"@types/react-router-dom": "^5.1.3",
+		"prettier": "1.19.1",
+		"redux-devtools-extension": "^2.13.8",
+		"source-map-explorer": "^2.2.2",
+		"typescript": "^3.3"
+	}
 }
