--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
 	"devDependencies": {
 		"@types/react-redux-toastr": "^7.4.1",
 		"@types/react-router-dom": "^5.1.3",
+		"eslint": "6.8.0",
+		"eslint-config-prettier": "6.10.0",
+		"eslint-plugin-prettier": "3.1.2",
 		"prettier": "1.19.1",
 		"redux-devtools-extension": "^2.13.8",
 		"source-map-explorer": "^2.2.2",
