--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"react-datepicker": "2.12.0",
 		"react-dom": "16.12.0",
 		"react-dropzone": "^10.1.5",
+		"react-hook-form": "4.9.3",
 		"react-infinite-scroller": "^1.2.4",
 		"react-lazyload": "^2.5.0",
 		"react-places-autocomplete": "^7.2.1",
