--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-	"name": "eventus",
+	"name": "revents",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"apisauce": "1.1.1",
 		"cuid": "^2.1.6",
 		"date-fns": "^2.0.0-alpha.27",
 		"firebase": "^7.8.1",
-		"google-map-react": "^1.1.4",
 		"moment": "^2.22.0",
+		"node-sass": "4.13.1",
 		"react": "16.12.0",
 		"react-cropper": "^1.2.0",
 		"react-datepicker": "2.12.0",
@@ -16,7 +17,7 @@
 		"react-hook-form": "4.9.3",
 		"react-infinite-scroller": "^1.2.4",
 		"react-lazyload": "^2.5.0",
-		"react-places-autocomplete": "^7.2.1",
+		"react-map-gl": "5.2.3",
 		"react-redux": "^7.1.3",
 		"react-redux-firebase": "^3.1.1",
 		"react-redux-toastr": "^7.5.1",
@@ -25,7 +26,6 @@
 		"redux": "4.0.5",
 		"redux-auth-wrapper": "^3.0.0",
 		"redux-firestore": "^0.12.0",
-		"redux-form": "^8.3.0",
 		"redux-thunk": "^2.3.0",
 		"revalidate": "^1.2.0",
 		"semantic-ui-react": "^0.88.2"
